prepare to railway

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ PGPASSWORD="zUjoNPGeEbTETngdRxnfyPhDJAajvcJG"
 PGHOST="postgres.railway.internal"
 PGPORT="5432"
 PGDATABASE="railway"
+
+# PGUSER="postgres"
+# PGPASSWORD="gikin13579"
+# PGHOST="localhost"
+# PGPORT="5432"
+# PGDATABASE="toxin"
