--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# PGUSER="postgres"
+# PGPASSWORD="gikin13579"
+# PGHOST="localhost"
+# PGPORT="5432"
+# PGDATABASE="toxin"
 
 PGUSER="postgres"
 PGPASSWORD="zUjoNPGeEbTETngdRxnfyPhDJAajvcJG"
